[gd_scene load_steps=9 format=2]

[ext_resource path="res://wpnsys/hurt_stuff/hurthitboxes/hitbox.tscn" type="PackedScene" id=1]
[ext_resource path="res://bullets/pipebomb/pipebomb.gd" type="Script" id=2]
[ext_resource path="res://wpnsys/hurt_stuff/bullet/new_bullet.gd" type="Script" id=3]
[ext_resource path="res://wpnsys/hurt_stuff/bullet/bullet_propeties.gd" type="Script" id=4]
[ext_resource path="res://bullets/pipebomb/pipebomb.png" type="Texture" id=5]
[ext_resource path="res://scripts/physicsthings.gd" type="Script" id=6]

[sub_resource type="CircleShape2D" id=5]
radius = 7.0

[sub_resource type="Resource" id=6]
script = ExtResource( 4 )
deletes_on_wall = true
deletes_on_enemy_hit = true
deletes_on_ally_hit = false
deletes_on_timeout = true
ignores_anti_tunneling_measures = false

[node name="GdtBullet" type="Node2D"]
script = ExtResource( 3 )
speed = 2.0
hitbox = SubResource( 5 )
_bullet_props = SubResource( 6 )

[node name="LifeTimer" type="Timer" parent="."]

[node name="Thing" type="Sprite" parent="."]
texture = ExtResource( 5 )
script = ExtResource( 2 )

[node name="Area2D" parent="." instance=ExtResource( 1 )]
monitorable = true
min_hit_priority = 35
max_hit_priority = 35

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
unique_name_in_owner = true
shape = SubResource( 5 )

[node name="PhysicsStuff" type="Node" parent="."]
script = ExtResource( 6 )
gravity_only_when_not_on_floor = false

[connection signal="collided" from="." to="Thing" method="_on_GdtBullet_collided"]
[connection signal="timeout" from="LifeTimer" to="." method="_on_Timer_timeout"]
[connection signal="actually_hit" from="Area2D" to="." method="_on_Area2D_actually_hit"]
[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
